HHeretic ChangeLog

v0.2.4
 - fixed a heap buffer overrun which was introduced back in v0.2.0.
 - new mus2midi converter code by Bret Curtis.
 - double-buffering support and double-buffered rectangle rendering in
   software renderer, by Miro Kropacek.
 - Atari (FreeMint) support, by Miro Kropacek.
 - miscellaneous cleanups and build fixes

v0.2.3
 - verified successful compilation using gcc-4.6 to 4.8 and clang-3.x.
   fixed some undefined behaviors in the C code.

v0.2.2
 - fixed e2 and e3 finale screens for opengl where they weren't drawn
   every frame and resulted in broken display.
 - configury updates.
 - fixed ENDTEXT printing.

v0.2.1
 - added packed attribute to some disk data structures which were
   accidentally missed in hheretic-0.2.0.
 - fixed player movement for environments where the char type is
   unsigned by default.
 - made detSideFloat() and findIntersectionVertex() to compile
   without optimizations, at least for gcc >= 4.4, providing some
   partial solution to opengl clipping problems.
 - added -nomidi as a new command line option.

v0.2.0
 - Support for 64 bit machines.
 - Support for big endian machines.
 - FreeBSD support.
 - Fixed structure packing enabling support for ARM, etc.
 - Support for newest gcc versions.
 - Updated build system with new configuration options.
 - Added SDL and SDL_mixer sound drivers in addition to OSS. SDL is
   the default. Can be changed by configure.
 - External ogg/mp3 music playback with the sdlmixer driver.
 - User directories fully implemented: $HOME/.hheretic
 - Added a shared data path system for the game's data files such as
   the wad files, external music files, etc. The shared data path is
   decided in the following order:
   * -waddir <DIR>  command line option,
   * HERETIC_DATA  environment variable,
   * --with-datapath=<DIR>  configure (compile time) option,
   * current working directory which has always been used as
     the last resort.