@@ -2,6 +2,7 @@ HHeretic ChangeLog
 
 v0.2.4
  - fixed a heap buffer overrun which was introduced back in v0.2.0.
+ - fixed buffer overrun in opengl texture code leading to segfaults.
  - new mus2midi converter code by Bret Curtis.
  - double-buffering support and double-buffered rectangle rendering in
    software renderer, by Miro Kropacek.
